added login and logout funcs with sessions in memory
